--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -10,18 +10,14 @@ transport:
 provisioner:
   name: dokken
   deprecations_as_errors: true
-  chef_log_level: info
 
 verifier:
   name: inspec
 
 platforms:
-  - name: centos-7
+  - name: ubuntu-20.04
     driver:
-      image: dokken/centos-7
-      pid_one_command: /usr/lib/systemd/systemd
-
-  - name: centos-8
-    driver:
-      image: dokken/centos-8
-      pid_one_command: /usr/lib/systemd/systemd
+      image: dokken/ubuntu-20.04
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
